<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ETA Trip Manager</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_sync_trips">Sync your trips</string>
    <string name="action_settings">Account Settings</string>
    <string name="btn_create_trip">Create New Trip</string>
    <string name="btn_view_trips">View All Trips</string>
    <string name="btn_delete_all_trips">Delete All Trips</string>
    <string name="btn_add_guest">Add A Guest</string>
    <string name="btn_pick_date">Pick Date</string>
    <string name="btn_pick_time">Pick Time</string>
    <string name="btn_create_this_trip">Create This Trip</string>
    <string name="btn_cancel_trip">Cancel Trip</string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_date">Trip Date &amp; Time</string>
    <string name="trip_loc">Trip Location</string>
    <string name="guests">Guests</string>
    <string name="welcome">Welcome</string>
    <string name="choose">Choose one of the following:</string>
    <string name="hint_trip_name">The Reuinon</string>
    <string name="hint_trip_loc">e.g. NYU Poly, Brooklyn</string>
    <string name="hint_trip_loc_type">Type: e.g. Cheese</string>
    <string name="no_guest">No guest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="tv_please_sign_in">Please sign in</string>
    
    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
</resources>