<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/button_ct_inviteFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="17dp"
            android:text="@string/btn_add_guest" />

        <TextView
            android:id="@+id/tv_ct_guests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_ct_inviteFriends"
            android:layout_below="@+id/button_ct_inviteFriends"
            android:text="@string/no_guest"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_ct_inviteFriends"
            android:layout_below="@+id/tv_ct_guests"
            android:layout_marginTop="20dp"
            android:text="@string/trip_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_tripName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView4"
            android:layout_below="@+id/textView4"
            android:ems="10"
            android:hint="@string/hint_trip_name" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_tripName"
            android:layout_below="@+id/editText_tripName"
            android:layout_marginTop="16dp"
            android:text="@string/trip_loc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editText_tripLoc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:ems="10"
            android:hint="@string/hint_trip_loc"/>

        <EditText
            android:id="@+id/editText_tripLocType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/editText_tripLoc"
            android:ems="10"
            android:hint="@string/hint_trip_loc_type" />

        <Button
            android:id="@+id/button_ct_searchLoc"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText_tripLocType"
            android:layout_marginLeft="17dp"
            android:layout_toRightOf="@+id/editText_tripLoc"
            android:background="@android:drawable/ic_menu_search" />

        <TextView
            android:id="@+id/tv_ct_loc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_tripLocType"
            android:layout_below="@+id/editText_tripLocType"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView5"
            android:layout_below="@+id/tv_ct_loc"
            android:layout_marginTop="14dp"
            android:text="@string/trip_date"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_ct_createTrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ct_time"
            android:layout_marginTop="14dp"
            android:layout_toRightOf="@+id/textView6"
            android:text="@string/btn_create_this_trip" />

        <Button
            android:id="@+id/button_ct_cancelTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/tv_ct_time"
            android:layout_marginTop="14dp"
            android:layout_toLeftOf="@+id/button_ct_createTrip"
            android:text="@string/btn_cancel_trip" />

        <Button
            android:id="@+id/button_ct_pickDate"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/textView6"
            android:text="@string/btn_pick_date" />

        <Button
            android:id="@+id/button_ct_pickTime"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button_ct_pickDate"
            android:layout_toRightOf="@+id/button_ct_pickDate"
            android:text="@string/btn_pick_time" />

        <TextView
            android:id="@+id/tv_ct_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView6"
            android:layout_below="@+id/button_ct_pickDate"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_ct_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_ct_date"
            android:layout_below="@+id/tv_ct_date"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</ScrollView>