<!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nyu.etatripmanager.ctrl.MainActivity" >

    <!--
         As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions.
    -->

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--
         android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         If you're not building against API 17 or higher, use
         android:layout_gravity="left" instead.
    -->
    <!--
         The drawer is given a fixed width in dp and extends the full height of
         the container.
    -->

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.nyu.etatripmanager.ctrl.NavigationDrawerFragment"
        android:layout_width="@dimen/navigation_drawer_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        tools:layout="@layout/fragment_navigation_drawer" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
>

        <TextView
            android:id="@+id/tv_ct_guests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:text="@string/welcome"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ct_guests"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/choose"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_main_createTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/btn_create_trip" />

        <Button
            android:id="@+id/button_main_viewTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_main_createTrip"
            android:layout_alignRight="@+id/button_main_createTrip"
            android:layout_below="@+id/button_main_createTrip"
            android:layout_marginTop="26dp"
            android:text="@string/btn_view_trips" />

        <Button
            android:id="@+id/button_main_deleteAllTrips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button_main_createTrip"
            android:layout_alignRight="@+id/button_main_createTrip"
            android:layout_below="@+id/button_main_viewTrip"
            android:layout_marginTop="26dp"
            android:text="@string/btn_delete_all_trips" />

        <TextView
            android:id="@+id/tv_main_activeTripInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_main_deleteAllTrips"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="5dp"
            android:text="No active trip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_main_lat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_main_activeTripInfo"
            android:layout_below="@+id/tv_main_activeTripInfo"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/tv_main_long"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tv_main_lat"
            android:layout_below="@+id/tv_main_lat"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>
</android.support.v4.widget.DrawerLayout>
